--- a/wiki/fr/TechDraw_ExtensionCustomizeFormat.html
+++ b/wiki/fr/TechDraw_ExtensionCustomizeFormat.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionCustomizeFormat/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionCustomizeFormat&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionCustomizeFormat.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungFormatierungAnpassen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionCustomizeFormat.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionCustomizeFormat (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionCustomizeFormat.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Personalizza formato (78% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionCustomizeFormat.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny Rozszerzenie Dostosuj format etykiety (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -58,16 +58,14 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez un objet Balloon ou un objet Dimension.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCustomizeFormat.svg&amp;filetimestamp=20240707202747&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCustomizeFormat.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Personnaliser une bulle</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCustomizeFormat.svg&amp;filetimestamp=20240707202747&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCustomizeFormat.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Personnaliser une bulle</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCustomizeFormat.svg&amp;filetimestamp=20240707202747&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCustomizeFormat.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Personnaliser une bulle</b> du menu.</li></ul></li>
 <li>Le panneau de t&acirc;ches <b>Personnaliser le format</b> s'ouvre.</li>
 <li>Modifiez le champ <b>Format</b> &agrave; l'aide des boutons disponibles du panneau de t&acirc;ches et/ou du clavier.</li>
 <li>Le champ <b>Aper&ccedil;u</b> affiche le r&eacute;sultat du formatage en cours.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -115,34 +113,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125121606
+Cached time: 20260125121628
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.118 seconds
-Preprocessor visited node count: 364/1000000
-Post&#8208;expand include size: 26120/2097152 bytes
-Template argument size: 10122/2097152 bytes
+CPU time usage: 0.061 seconds
+Real time usage: 0.073 seconds
+Preprocessor visited node count: 363/1000000
+Post&#8208;expand include size: 26107/2097152 bytes
+Template argument size: 10109/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1340/5000000 bytes
+Unstrip post&#8208;expand size: 1344/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.904      1 -total
- 30.71%    6.726      1 Template:TechDraw_Tools_navi/fr
- 24.96%    5.467      2 Template:Navigation_menu_2
- 20.61%    4.515      1 Template:Userdocnavi/fr
- 12.29%    2.692      2 Template:Docnav/fr
-  9.78%    2.142      4 Template:MenuCommand
-  9.29%    2.035      1 Template:GuiCommand/fr
-  8.29%    1.816      2 Template:Button
-  5.41%    1.185      1 Template:Caption
+100.00%   14.939      1 -total
+ 32.93%    4.920      1 Template:TechDraw_Tools_navi/fr
+ 29.30%    4.377      2 Template:Navigation_menu_2
+ 18.27%    2.729      1 Template:Userdocnavi/fr
+ 12.99%    1.940      2 Template:Docnav/fr
+ 12.07%    1.803      1 Template:GuiCommand/fr
+  7.32%    1.094      1 Template:Caption
+  7.08%    1.058      4 Template:MenuCommand
+  5.23%    0.782      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:280580-0!canonical and timestamp 20260125121606 and revision id 1743880. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:280580-0!canonical and timestamp 20260125121627 and revision id 1743882. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
