--- a/wiki/fr/TechDraw_ExtensionLinePerpendicular.html
+++ b/wiki/fr/TechDraw_ExtensionLinePerpendicular.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionLinePerpendicular/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionLinePerpendicular&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionLinePerpendicular.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungRechtwinkligeLinie (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionLinePerpendicular.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionLinePerpendicular (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionLinePerpendicular.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj pomocnicz&#261; lini&#281; prostopad&#322;&#261; (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionLineParallel.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">Ligne parall&egrave;le</a></div>
@@ -57,15 +57,13 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Sp&eacute;cifiez &agrave; votre convenance les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez une ar&ecirc;te droite pour d&eacute;terminer la direction et la longueur de la ligne.</li>
 <li>S&eacute;lectionnez un sommet pour d&eacute;terminer la position de la ligne.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionLinePerpendicular.svg&amp;filetimestamp=20240706151323&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionLinePerpendicular.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ligne perpendiculaire cosm&eacute;tique</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionLinePerpendicular.svg&amp;filetimestamp=20240706151323&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionLinePerpendicular.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ligne perpendiculaire cosm&eacute;tique</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Cosmetic Perpendicular Line &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionLinePerpendicular.svg&amp;filetimestamp=20240706151323&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionLinePerpendicular.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ligne perpendiculaire cosm&eacute;tique</b> du menu.</li></ul></li>
 <li>Une ligne cosm&eacute;tique est ajout&eacute;e.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -113,34 +111,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125121751
+Cached time: 20260125121812
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.059 seconds
-Real time usage: 0.087 seconds
-Preprocessor visited node count: 347/1000000
-Post&#8208;expand include size: 25980/2097152 bytes
-Template argument size: 10314/2097152 bytes
+CPU time usage: 0.074 seconds
+Real time usage: 0.101 seconds
+Preprocessor visited node count: 346/1000000
+Post&#8208;expand include size: 25974/2097152 bytes
+Template argument size: 10308/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1172/5000000 bytes
+Unstrip post&#8208;expand size: 1176/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.710      1 -total
- 30.97%    5.485      1 Template:TechDraw_Tools_navi/fr
- 24.30%    4.304      2 Template:Navigation_menu_2
- 21.06%    3.729      1 Template:Userdocnavi/fr
- 15.21%    2.694      2 Template:Docnav/fr
- 10.82%    1.917      1 Template:GuiCommand/fr
-  7.05%    1.248      1 Template:Caption
-  6.05%    1.072      1 Template:MenuCommand
-  6.05%    1.071      1 Template:Button
+100.00%   19.018      1 -total
+ 32.85%    6.247      1 Template:TechDraw_Tools_navi/fr
+ 25.48%    4.845      2 Template:Navigation_menu_2
+ 20.05%    3.813      1 Template:Userdocnavi/fr
+ 14.93%    2.839      2 Template:Docnav/fr
+ 11.31%    2.150      1 Template:GuiCommand/fr
+  6.45%    1.226      1 Template:Caption
+  6.30%    1.199      1 Template:MenuCommand
+  5.23%    0.995      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277811-0!canonical and timestamp 20260125121750 and revision id 1743884. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277811-0!canonical and timestamp 20260125121812 and revision id 1743886. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
