--- a/wiki/fr/TechDraw_FillTemplateFields.html
+++ b/wiki/fr/TechDraw_FillTemplateFields.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw FillTemplateFields/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+FillTemplateFields&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_FillTemplateFields.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw VorlagenfelderAusf&uuml;llen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_FillTemplateFields.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw FillTemplateFields (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_FillTemplateFields.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Aggiorna campi modello (55% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_FillTemplateFields.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Aktualizuj pola szablonu (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/TechDraw_FillTemplateFields.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw FillTemplateFields/pt-br (27% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
@@ -58,7 +58,6 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Avant de lancer l'outil, cr&eacute;ez une page avec le mod&egrave;le s&eacute;lectionn&eacute; et ajoutez une vue.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_FillTemplateFields.svg&amp;filetimestamp=20240708195027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FillTemplateFields.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Mettre &agrave; jour les champs du mod&egrave;le</a></span>.</li>
@@ -66,7 +65,6 @@
 <li>La fen&ecirc;tre <i>Remplir les champs du mod&egrave;le dans la page</i> appara&icirc;t.</li>
 <li>D&eacute;s&eacute;lectionnez les cases &agrave; cocher <i>Mettre &agrave; jour</i> &agrave; c&ocirc;t&eacute; des champs que vous ne voulez pas mettre &agrave; jour. Vous pouvez &eacute;galement utiliser la case &agrave; cocher <i>Tout mettre &agrave; jour</i> pour activer et d&eacute;sactiver tous les champs. Si vous le souhaitez, vous pouvez &eacute;diter les cha&icirc;nes de caract&egrave;res indiqu&eacute;es &agrave; droite si vous voulez modifier les donn&eacute;es extraites des informations du document.</li>
 <li>Appuyez sur <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Ok</span> pour mettre &agrave; jour les champs ou sur <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Annuler</span> pour annuler les modifications.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -120,35 +118,35 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125121859
+Cached time: 20260125121914
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.124 seconds
-Preprocessor visited node count: 378/1000000
+CPU time usage: 0.083 seconds
+Real time usage: 0.125 seconds
+Preprocessor visited node count: 377/1000000
 Post&#8208;expand include size: 25709/2097152 bytes
 Template argument size: 9873/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1684/5000000 bytes
+Unstrip post&#8208;expand size: 1688/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.750      1 -total
- 24.38%    7.009      1 Template:TechDraw_Tools_navi/fr
- 21.28%    6.117      2 Template:Docnav/fr
- 18.33%    5.271      2 Template:Navigation_menu_2
- 12.44%    3.576      1 Template:Userdocnavi/fr
-  9.06%    2.606      1 Template:GuiCommand/fr
-  8.14%    2.341      1 Template:Clear
-  5.78%    1.661      1 Template:Version/fr
-  5.67%    1.629      3 Template:Button
-  5.10%    1.466      2 Template:FileName
+100.00%   24.627      1 -total
+ 24.87%    6.125      1 Template:TechDraw_Tools_navi/fr
+ 20.21%    4.976      2 Template:Navigation_menu_2
+ 18.65%    4.592      1 Template:Userdocnavi/fr
+ 11.43%    2.815      1 Template:Clear
+ 10.56%    2.600      2 Template:Docnav/fr
+  9.90%    2.437      1 Template:GuiCommand/fr
+  6.42%    1.581      1 Template:Version/fr
+  5.93%    1.461      2 Template:FileName
+  4.58%    1.127      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:352316-0!canonical and timestamp 20260125121859 and revision id 1743888. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:352316-0!canonical and timestamp 20260125121914 and revision id 1743890. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
