--- a/wiki/fr/TechDraw_General_Examples.html
+++ b/wiki/fr/TechDraw_General_Examples.html
@@ -195,12 +195,8 @@ TechDraw propose plusieurs outils pour appliquer des cotes &agrave; la repr&eacu
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_HorizontalExtentDimension.svg&amp;filetimestamp=20240706212546&amp;.html" class="mw-file-description"><img src="../File/TechDraw_HorizontalExtentDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_HorizontalExtentDimension.html" title="TechDraw HorizontalExtentDimension/fr">Cote &eacute;tendue horizontale</a></li>
 <li><span typeof="mw:File"><a href="../index.php?title=TechDraw_VerticalExtentDimension.svg&amp;filetimestamp=20240706212642&amp;.html" class="mw-file-description"><img src="../File/TechDraw_VerticalExtentDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_VerticalExtentDimension.html" title="TechDraw VerticalExtentDimension/fr">Cote &eacute;tendue verticale</a></li></ul>
 <p>Ils ne peuvent pas (encore) &ecirc;tre li&eacute;s &agrave; la g&eacute;om&eacute;trie 3D.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Voir <a href="../fr/TechDraw_LengthDimension.html#Fen%C3%AAtre_de_dialogue_Cote" title="TechDraw LengthDimension/fr">Fen&ecirc;tre de dialogue Cote</a> (et la section suivante sur les propri&eacute;t&eacute;s) pour tous les param&egrave;tres qui ne sont pas mentionn&eacute;s dans cet aper&ccedil;u.
-</p>
-</div>
-<p><span id="Simple_dimensions"></span>
+</p><p>Voir <a href="../fr/TechDraw_LengthDimension.html#Panneau_des_t%C3%A2ches_de_Cote" title="TechDraw LengthDimension/fr">Panneau des t&acirc;ches de Cote</a> (et la section suivante sur les propri&eacute;t&eacute;s) pour tous les param&egrave;tres qui ne sont pas mentionn&eacute;s dans cet aper&ccedil;u.
+</p><p><span id="Simple_dimensions"></span>
 </p>
 <h3><span class="mw-headline" id="Les_cotes_simples">Les cotes simples</span></h3>
 <p>Le texte de la cote d&eacute;pend principalement de ces propri&eacute;t&eacute;s&nbsp;:
@@ -404,13 +400,13 @@ TechDraw propose plusieurs outils pour appliquer des cotes &agrave; la repr&eacu
 <p><a href="#top">En haut</a></p>
 <!-- 
 NewPP limit report
-Cached time: 20260125121944
+Cached time: 20260125122045
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.224 seconds
-Real time usage: 0.279 seconds
-Preprocessor visited node count: 1708/1000000
+CPU time usage: 0.238 seconds
+Real time usage: 0.292 seconds
+Preprocessor visited node count: 1707/1000000
 Post&#8208;expand include size: 29384/2097152 bytes
 Template argument size: 3839/2097152 bytes
 Highest expansion depth: 8/100
@@ -420,19 +416,19 @@ Unstrip post&#8208;expand size: 1073/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.829      1 -total
- 18.45%   10.115     24 Template:PropertyData
- 13.83%    7.585     27 Template:Caption
- 12.62%    6.918     25 Template:Variable
-  9.53%    5.223     11 Template:Value
-  6.08%    3.335      1 Template:VersionMinus/fr
-  4.79%    2.627      4 Template:Top
-  4.45%    2.438     11 Template:Incode
-  3.24%    1.779      1 Template:UnfinishedDocu
-  2.88%    1.578      3 Template:True
+100.00%   60.354      1 -total
+ 15.80%    9.536     24 Template:PropertyData
+ 12.78%    7.712     27 Template:Caption
+ 11.54%    6.967     25 Template:Variable
+  6.25%    3.775     11 Template:Value
+  4.77%    2.876      4 Template:Top
+  3.71%    2.241      1 Template:PropertyView
+  3.60%    2.174      1 Template:TOCright
+  2.97%    1.792      1 Template:VersionMinus/fr
+  2.82%    1.700      3 Template:True
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:320358-0!canonical and timestamp 20260125121944 and revision id 1743894. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:320358-0!canonical and timestamp 20260125122045 and revision id 1743896. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
